--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,27 @@ code {
     monospace;
 }
 
+.App {
+  position: relative;
+  min-height: 100vh;
+}
+
+.pages {
+  padding-bottom: 2.5rem;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
 .input-field {
   flex: 1;
+}
+
+.nav-item:hover {
+  background-color: lightgray;
+  border-radius: 8px;
 }
